# ultimate-common

./: .gitignore  .markdownlint.json  Cargo.toml  README.md  deny.toml  rustfmt.toml
crates/huaweicloud-sdk-core/: Cargo.toml
crates/huaweicloud-sdk-core/docs/config/: application-example.toml
crates/huaweicloud-sdk-core/docs/sdk-py/: main.py
crates/huaweicloud-sdk-core/examples/: example-iam_client.rs  example-securitytokens.rs  example-tokens.rs  example_http_client.rs
crates/huaweicloud-sdk-core/resources/: app.toml
crates/huaweicloud-sdk-core/src/: digest.rs  error.rs  iam_client.rs  lib.rs
crates/huaweicloud-sdk-core/src/client/: client_config.rs  credentials.rs  http_client_builder.rs  mod.rs
crates/huaweicloud-sdk-core/src/model/: auth.rs  mod.rs  token.rs
crates/huaweicloud-sdk-obs/: Cargo.toml
crates/huaweicloud-sdk-obs/examples/: example-obs.rs
crates/huaweicloud-sdk-obs/src/: lib.rs  metas.rs  obs_client.rs
crates/ultimate/: Cargo.toml  build.rs
crates/ultimate-api/: Cargo.toml
crates/ultimate-api/src/v1/: page.rs
crates/ultimate-common/: Cargo.toml  README.md
crates/ultimate-common/src/: env.rs  error.rs  lib.rs  serde.rs  string.rs  time.rs
crates/ultimate-common/src/model/: mod.rs
crates/ultimate-common/src/model/sensitive/: sensitive_string.rs
crates/ultimate-db/: Cargo.toml
crates/ultimate-db/examples/: lookup.rs
crates/ultimate-db/src/: id.rs  lib.rs  model_manager.rs  modql_utils.rs  page.rs
crates/ultimate-db/src/base/: crud_fns.rs  macro_utils.rs  mod.rs
crates/ultimate-db/src/store/dbx/: error.rs  mod.rs
crates/ultimate-grpc/: Cargo.toml
crates/ultimate-grpc/src/: utils.rs
crates/ultimate/examples/: example-config.rs  example-envs.rs
crates/ultimate/src/: ctx.rs  data_error.rs  lib.rs  model.rs  run_mode.rs  starter.rs
crates/ultimate/src/configuration/: configuration.rs  mod.rs  ultimate_config.rs
crates/ultimate/src/configuration/model/: app_conf.rs  db_conf.rs  db_config.rs  grpc_conf.rs  grpc_config.rs  mod.rs  security_config.rs  trace_config.rs  web_config.rs
crates/ultimate/src/security/: jose.rs  security_utils.rs
crates/ultimate/src/trace/: util.rs
crates/wework-sdk/: .gitignore  Cargo.toml  README.md
crates/wework-sdk/examples/: example-wework_client.rs  example-wework_webhooks.rs
crates/wework-sdk/src/: consts.rs  error.rs  lib.rs  utils.rs  wework_config.rs
crates/wework-sdk/src/client/: mod.rs  wework_auths.rs  wework_client.rs  wework_contacts.rs  wework_messages.rs  wework_webhooks.rs
crates/wework-sdk/src/model/: auth.rs  mod.rs  msg.rs  token.rs  user.rs  webhook.rs
examples/api-example/: Cargo.toml  README.md
examples/api-example/resources/: app.toml
examples/api-example/src/: app.rs  ctx.rs  lib.rs  main.rs  router.rs  state.rs  util.rs
examples/api-example/src/auth/: auth_serv.rs  mod.rs  web.rs
examples/api-example/src/user/: mod.rs  user_bmc.rs  user_credential_bmc.rs  user_model.rs  user_serv.rs  web.rs
examples/db-example/: Cargo.toml
examples/db-example/src/role/: mod.rs  model.rs  role_bmc.rs  role_service.rs
examples/fruitbox-iam/: Cargo.toml  README.md  build.rs
examples/fruitbox-iam/examples/: cell.rs  grpc-web.rs  qrcode-example.rs  shared.rs
examples/fruitbox-iam/proto/fruitbox-iam/fruitbox/: auth.proto
examples/fruitbox-iam/proto/fruitbox_iam/v1/: auth.proto  iam.proto  permission.proto  role.proto  user.proto
examples/fruitbox-iam/proto/ultimate_api/v1/: page.proto  ultimate.proto
examples/fruitbox-iam/resources/: app.toml
examples/fruitbox-iam/src/: app.rs  ctx.rs  grpc.rs  lib.rs  pb.rs  proto.rs  router.rs  v1.rs
examples/fruitbox-iam/src/auth/: auth_serv.rs  grpc.rs  mod.rs  model.rs  utils.rs  web.rs
examples/fruitbox-iam/src/endpoint/: grpc.rs  mod.rs  router.rs
examples/fruitbox-iam/src/endpoint/grpc/: interceptor.rs  mod.rs
examples/fruitbox-iam/src/permission/: grpc.rs  helper.rs  impls.rs  mod.rs  model.rs  permission_bmc.rs  permission_serv.rs
examples/fruitbox-iam/src/role/: grpc.rs  helper.rs  mod.rs  model.rs  role_bmc.rs  role_permission.rs  role_serv.rs
examples/fruitbox-iam/src/user/: grpc.rs  mod.rs  user_bmc.rs  user_credential_model.rs  user_model.rs  user_role.rs  user_serv.rs  web.rs
examples/fruitbox-iam/src/util/grpc/: interceptor.rs  mod.rs
qinling/qinling-iam/: Cargo.toml  README.md  build.rs.bak
qinling/qinling-iam/examples/: http-e2etest-iam.rs
qinling/qinling-iam/proto/qinling/: qinling_iam-auth.proto  qinling_iam-user.proto
qinling/qinling-iam/resources/: app.toml
qinling/qinling-iam/src/: application.rs  ctx.rs  lib.rs  main.rs  router.rs  rpc.rs.bak
qinling/qinling-iam/src/iam/: mod.rs
qinling/qinling-iam/src/iam/auth/: mod.rs  serv.rs  web.rs
qinling/qinling-iam/src/iam/repos/: mod.rs  (+2 more)
ultimates/ultimate/: Cargo.toml  README.md
ultimates/ultimate-db/: Cargo.toml
ultimates/ultimate-db/examples/: example-sqlx.rs  lookup.rs
ultimates/ultimate-db/src/: auth.rs  error.rs  id.rs  lib.rs  model_manager.rs  modql_utils.rs  page.rs  types.rs
ultimates/ultimate-db/src/base/: crud_fns.rs  db_bmc.rs  macro_utils.rs  mod.rs  utils.rs
ultimates/ultimate-db/src/store/: mod.rs
ultimates/ultimate-web/: Cargo.toml
ultimates/ultimate-web/src/: error.rs  extract.rs  lib.rs  server.rs  util.rs  utils.rs
ultimates/ultimate/data/: README.md
ultimates/ultimate/data/pem/: EC_P-256_private.pem  EC_P-256_public.pem
ultimates/ultimate/examples/: example-config.rs  example-envs.rs  example-regex.rs
ultimates/ultimate/resources/: app-local.toml  app.yaml
ultimates/ultimate/src/: ctx.rs  data_error.rs  lib.rs  metas.rs  model.rs  run_mode.rs  starter.rs
ultimates/ultimate/src/configuration/: default.toml  error.rs  mod.rs  trace_config.rs  ultimate_config.rs  util.rs
ultimates/ultimate/src/error/: data_error.rs  mod.rs
ultimates/ultimate/src/model/: auth.rs  error.rs  mod.rs
ultimates/ultimate/src/security/: error.rs  jose.rs  mod.rs  pwd.rs  security_config.rs  security_utils.rs
ultimates/ultimate/src/signal/: monitor.rs
ultimates/ultimate/src/trace/: mod.rs  util.rs
(+61 files in other folders)
