[package]
name = "huaweicloud-sdk-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
urlencoding = { workspace = true }
url = { workspace = true }
typed-builder = { workspace = true }
config.workspace = true
sha2.workspace = true
hmac.workspace = true
base64ct.workspace = true
base16ct.workspace = true
chrono = { version = "0.4", default-features = false, features = [
    "std",
    "clock",
    "serde",
] }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
asserhttp = { workspace = true }
reqwest = { workspace = true }
dotenvy = { workspace = true }
