[package]
name = "ultimate-grpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license-file.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
ultimate = { workspace = true, features = ["tonic"] }
tonic = { workspace = true }
tonic-types = { workspace = true }
tonic-reflection = { workspace = true, optional = true }
prost = { workspace = true }
prost-types = { workspace = true }
