[package]
name = "ultimate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license-file.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = ["tracing-appender"]

[dependencies]
ultimate-common.workspace = true
thiserror.workspace = true
regex.workspace = true
futures.workspace = true
tokio.workspace = true
async-trait.workspace = true
toml.workspace = true
config.workspace = true
strum_macros.workspace = true
uuid = { workspace = true, optional = true }
ulid = { workspace = true, optional = true }
log.workspace = true
tracing.workspace = true
# tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing-appender = { workspace = true, optional = true }
rand.workspace = true
argon2.workspace = true
josekit.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tonic = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }

[dev-dependencies]
dotenvy.workspace = true
anyhow.workspace = true
