[package]
name = "wework-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license-file.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
weixin-common = { workspace = true }
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
reqwest = { workspace = true, features = ["multipart"] }
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
async-trait.workspace = true
typed-builder.workspace = true
tracing.workspace = true
url.workspace = true
strum.workspace = true

[dev-dependencies]
anyhow.workspace = true
asserhttp = { workspace = true }
config.workspace = true
dotenvy.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
