[package]
name = "api-example"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license-file.workspace = true
repository.workspace = true

[[bin]]
name = "api-example"
path = "bin/api-example.rs"

[lints]
workspace = true

[dependencies]
ultimate-common = { workspace = true }
ultimate = { workspace = true }
ultimate-api = { workspace = true, features = ["utoipa"] }
ultimate-web = { workspace = true }
ultimate-db = { workspace = true }
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
axum.workspace = true
typed-builder.workspace = true
derive-getters.workspace = true
derive_more.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
sqlx.workspace = true
sea-query.workspace = true
sea-query-binder.workspace = true
modql.workspace = true
enum-iterator.workspace = true
derive-new = "0.7"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
