[package]
name = "db-example"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license-file.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
ultimate.workspace = true
ultimate-db.workspace = true
chrono.workspace = true
sqlx.workspace = true
sea-query.workspace = true
sea-query-binder.workspace = true
modql.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
anyhow.workspace = true
