[package]
name = "fruitbox-iam"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license-file.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "fruitbox-iam"
path = "bin/fruitbox-iam.rs"

[dependencies]
# -- ultimates
ultimate-common = { workspace = true }
ultimate = { workspace = true }
ultimate-web = { workspace = true }
ultimate-db = { workspace = true }
# -- misc
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
derive_more = { workspace = true }
derive-getters = { workspace = true }
typed-builder = { workspace = true }
enum-iterator = { workspace = true }
# -- tokio & async
tokio = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
# -- tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }
# -- web
axum = { workspace = true }
# -- db
sqlx = { workspace = true }
sea-query = { workspace = true }
sea-query-binder = { workspace = true }
modql = { workspace = true }
# -- grpc https://crates.io/crates/tonic
tonic = { workspace = true }
prost = { workspace = true }


[target.'cfg(not(target_env = "msvc"))'.dependencies]
# -- memory allocator
tikv-jemallocator.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[build-dependencies]
tonic-build = { workspace = true }
