[package]
name = "qinling-iam"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "README.md"
publish = false

[dependencies]
ultimate-common = { workspace = true, features = ["prost-types"] }
ultimate = { workspace = true, features = ["tracing-appender"] }
ultimate-web.workspace = true
ultimate-db.workspace = true
anyhow.workspace = true
thiserror.workspace = true
strum_macros.workspace = true
uuid.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
typed-builder.workspace = true
derive-getters.workspace = true
headers.workspace = true
hyper.workspace = true
axum.workspace = true
axum-extra.workspace = true
josekit.workspace = true
utoipa.workspace = true
sqlx.workspace = true
sea-query.workspace = true
sea-query-binder.workspace = true
modql.workspace = true
prost.workspace = true
prost-types.workspace = true
# tonic.workspace = true
# tonic-reflection.workspace = true

[dev-dependencies]
reqwest.workspace = true
asserhttp.workspace = true
dotenvy.workspace = true
serde_json.workspace = true

[build-dependencies]
# tonic-build.workspace = true
