[package]
name = "ultimate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license-file.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]

[dependencies]
ultimate-common.workspace = true
thiserror.workspace = true
regex.workspace = true
tokio.workspace = true
async-trait.workspace = true
toml = "0.8"
# yaml-rust = "0.4"
config.workspace = true
strum_macros.workspace = true
uuid.workspace = true
log.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing-appender = { workspace = true, optional = true }
rand.workspace = true
argon2 = "0.5"
josekit.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
derive_more.workspace = true
# tonic = { workspace = true, optional = true }

[dev-dependencies]
dotenvy.workspace = true
anyhow.workspace = true
